[gd_scene load_steps=3 format=3 uid="uid://damgu8yisqaqv"]

[ext_resource type="Script" uid="uid://thajttsvbs1h" path="res://addons/nodescript/ui/root_meta_editor.gd" id="1"]
[ext_resource type="Theme" uid="uid://bbkufuj4lk7no" path="res://addons/nodescript/ui/styling/node_script_styling.tres" id="1_qshps"]

[node name="RootMetaEditor" type="PanelContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qshps")
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_qshps")

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_qshps")
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("1_qshps")
theme_type_variation = &"panel_header"

[node name="Header" type="HBoxContainer" parent="Margin/VBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_qshps")
alignment = 1

[node name="HeaderIcon" type="TextureRect" parent="Margin/VBox/Panel/Header"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("1_qshps")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="Margin/VBox/Panel/Header"]
layout_mode = 2
theme = ExtResource("1_qshps")
theme_type_variation = &"panel_header_font"
text = "File Meta"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid" type="GridContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_qshps")
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 2

[node name="FileLabel" type="Label" parent="Margin/VBox/Grid"]
layout_mode = 2
theme = ExtResource("1_qshps")
text = "File"

[node name="FileNameLabel" type="Label" parent="Margin/VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_qshps")

[node name="ToolLabel" type="Label" parent="Margin/VBox/Grid"]
layout_mode = 2
theme = ExtResource("1_qshps")
text = "@tool"

[node name="ToolCheck" type="CheckBox" parent="Margin/VBox/Grid"]
layout_mode = 2
theme = ExtResource("1_qshps")
text = "Enable"

[node name="ExtendsLabel" type="Label" parent="Margin/VBox/Grid"]
layout_mode = 2
theme = ExtResource("1_qshps")
text = "Extends"

[node name="ExtendsEdit" type="LineEdit" parent="Margin/VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_qshps")
placeholder_text = "Node"

[node name="ClassNameLabel" type="Label" parent="Margin/VBox/Grid"]
layout_mode = 2
theme = ExtResource("1_qshps")
text = "Class Name"

[node name="ClassNameEdit" type="LineEdit" parent="Margin/VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_qshps")
placeholder_text = "MyClass"

[node name="Buttons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_qshps")
theme_override_constants/separation = 8
alignment = 2

[node name="ConfirmButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_qshps")
text = "Save Meta"
